[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssh-tools"
dynamic = ["version"]
description = 'A collection of SSH utilities'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    "click",
]

[project.scripts]
ssh-tools = "ssh_tools.cli:main"

[tool.hatch.version]
path = "src/ssh_tools/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ssh_tools"]